init:add Struct DwGpio basic implementation
Signed-off-by: tangq7443@163.com <69003433@gitlab.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+linux=["osl/linux"]
+arceos=["osl/arceos"]
+default=["linux"]
+
 [dependencies]
 tock-registers = "0.8.0"
-log = "0.4"
+# release use repo
+osl = {path = "../../../rust/osl"}
 
 [target.'cfg(target_os = "arceos")'.dependencies]
 #Linux no need depend osl on cargo, it would be through `extern osl` import  
